--- a/User Interface Interactions Demo/index.html
+++ b/User Interface Interactions Demo/index.html
@@ -8,15 +8,20 @@
   </head>
   <body>
     <!-- DROP DOWN MENU -->
-    <div class="dropdown">
-      <button onclick="toggleDropdown()">Dropdown</button>
-      <div id="dropdownContent" class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+    <ul class="dropdown-menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">About</a></li>
+      <div class="dropdown">
+        <button onclick="toggleDropdown()">Dropdown</button>
+        <div id="dropdownContent" class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
       </div>
-    </div>
-    <div class="pinkbox"></div>
+    </ul>
     <script src="scripts.js"></script>
   </body>
 </html>
