--- a/User Interface Interactions Demo/index.html
+++ b/User Interface Interactions Demo/index.html
@@ -15,10 +15,18 @@
       <li><a href="#">About</a></li>
       <div class="dropdown">
         <button onclick="toggleDropdown()">Dropdown</button>
-        <div id="dropdownContent" class="dropdown-content">
+        <div class="dropdownContent" class="dropdown-content">
           <a href="#">Link 1</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button onclick="toggleDropdown()">Dropdown</button>
+        <div class="dropdownContent" class="dropdown-content">
+          <a href="#">Link 4</a>
+          <a href="#">Link 5</a>
+          <a href="#">Link 6</a>
         </div>
       </div>
     </ul>
