--- a/User Interface Interactions Demo/index2.html
+++ b/User Interface Interactions Demo/index2.html
@@ -7,7 +7,22 @@
     <title>Hamburger Menu</title>
   </head>
   <body>
-
+    <!-- Hamburger Menu -->
+    <div id="menu-bar">
+      <div id="menu" onclick="onClickMenu()">
+        <div id="bar1" class="bar"></div>
+        <div id="bar2" class="bar"></div>
+        <div id="bar3" class="bar"></div>
+      </div>
+      <ul class="nav" id="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="menu-bg" id="menu-bg"></div>
     <script src="scripts.js"></script>
   </body>
 </html>
