--- a/User Interface Interactions Demo/index.html
+++ b/User Interface Interactions Demo/index.html
@@ -14,16 +14,16 @@
       <li><a href="#">Contact</a></li>
       <li><a href="#">About</a></li>
       <div class="dropdown">
-        <button onclick="toggleDropdown()">Dropdown</button>
-        <div class="dropdownContent" class="dropdown-content">
+        <button class="btn">Dropdown</button>
+        <div class="dropdown-content dropdown-content-hide">
           <a href="#">Link 1</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
       </div>
       <div class="dropdown">
-        <button onclick="toggleDropdown()">Dropdown</button>
-        <div class="dropdownContent" class="dropdown-content">
+        <button class="btn">Dropdown</button>
+        <div class="dropdown-content dropdown-content-hide">
           <a href="#">Link 4</a>
           <a href="#">Link 5</a>
           <a href="#">Link 6</a>
