--- a/Form Practice/index.html
+++ b/Form Practice/index.html
@@ -7,7 +7,9 @@
   <title>Form Practice</title>
 </head>
 <body>
-  
+  <form action="/" method="POST">
+    
+  </form>
   <script src="scripts.js"></script>
 </body>
 </html>
