Added validation for country

--- a/Form Practice/index.html
+++ b/Form Practice/index.html
@@ -20,6 +20,7 @@
               type="text"
               id="country-input"
               placeholder="Country"
+              pattern="^[A-Za-z]{3,28}$"
               required
             />
           </div>
